# itom-orchestrator

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.agent-forge/: project.json
.agent-forge/plans/: backlog.json  progress-log.json  project-brief.md  roadmap.json
.agent-forge/reports/: auto-session-20260213-190000.md
.agent-forge/state/: build-output.json  monitor-output.json  pipeline.json  plan-output.json  test-output.json  validate-output.json
.agent-forge/tests/: test-cases.json
config/: routing-rules.json
src/itom_orchestrator/: __init__.py  agent_config.py  agent_dispatch.py  audit_trail.py  config.py  error_codes.py  event_bus.py  executor.py  health.py  http_server.py  logging_config.py  messaging.py  notifications.py  persistence.py  registry.py  role_enforcer.py  router.py  routing_config.py  run_server.py  server.py  workflow_checkpoint.py  workflow_engine.py  workflow_templates.py
src/itom_orchestrator/api/: __init__.py  chat.py  routes.py
src/itom_orchestrator/models/: __init__.py  agents.py  messages.py  tasks.py  workflows.py
tests/: conftest.py  test_routing_rules.py
tests/integration/: test_mcp_integration.py  test_messaging_integration.py  test_workflow_integration.py
tests/unit/: test_agent_config.py  test_audit_trail.py  test_chat_endpoint.py  test_clarification.py  test_config.py  test_error_codes.py  test_event_bus.py  test_executor.py  test_health.py  test_http_server.py  test_logging_config.py  test_messaging.py  test_models.py  test_notifications.py  test_persistence.py  test_registry.py  test_role_enforcer.py  test_router.py  test_routing_config.py  test_server.py  test_workflow_checkpoint.py  test_workflow_engine.py  test_workflow_templates.py
