[project]
name = "itom-orchestrator"
version = "0.1.0"
description = "Central coordinator for all ITOM agents -- routes tasks, manages workflows, enforces role boundaries, handles cross-agent communication, maintains execution state."
authors = [
    {name = "Cesar Garcia Lopez", email = "cesar@cesargl.com"}
]
readme = "README.md"
license = {text = "Proprietary - See LICENSE"}
requires-python = ">=3.11"
keywords = ["servicenow", "itom", "mcp", "orchestrator", "agent", "automation", "workflow"]

dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/amragl/itom-orchestrator"
Repository = "https://github.com/amragl/itom-orchestrator"
"Bug Tracker" = "https://github.com/amragl/itom-orchestrator/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/itom_orchestrator"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["itom_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=src/itom_orchestrator --cov-report=term-missing --tb=short"
markers = [
    "integration: marks tests that require external services (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src/itom_orchestrator"]
branch = true

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
